# slv-demo-01

./: CMakeLists.old  CMakeLists.txt  README.md  build.sh  build_emscripten.sh  index.html  slvdemo.data  slvdemo.html  slvdemo.js  slvdemo.wasm
.github/workflows/: build-demo.yml
html/: index.css  index.html
include/: damage.hpp  energy.hpp  game_scene.hpp  health.hpp  size.hpp  stars.hpp  title_scene.hpp
src/: game_scene.cpp  main.cpp  title_scene.cpp
src/include/: damage.hpp  energy.hpp  game_scene.hpp  health.hpp  size.hpp  stars.hpp  title_scene.hpp
